# ESGI_casseBrick

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  main.c
header/: board.h  bomb.h  cell.h  filereader.h  ia.h  my_math.h  object.h  player.h  player_action.h
map/: map_3_collision
src/: board.c  bomb.c  cell.c  filereader.c  ia.c  my_math.c  object.c  player.c  player_action.c
test_src/: test_IA.c  test_board.c  test_bomb.c  test_cell.c  test_filereader.c  test_my_math.c  test_player.c  test_player_action.c
